--- a/NinjaOrganizer.API/appsettings.json
+++ b/NinjaOrganizer.API/appsettings.json
@@ -1,11 +1,12 @@
 {
   "AppSettings": {
-    "Secret": "THIS IS USED TO SIGN AND VERIFY JWT TOKENS, REPLACE IT WITH YOUR OWN SECRET, IT CAN BE ANY STRING"
+    //Secret is used for sign and verify jwt tokens, it can be any string
+    "Secret": "1DFDB348-FF50-4876-8909-9B072D1B060D"
   },
-  "mailSettings": {
-    "mailToAddress": "admin@mycompany.com",
-    "mailFromAddress": "noreply@mycompany.com"
-  },
+  //"mailSettings": {
+  //  "mailToAddress": "admin@mycompany.com",
+  //  "mailFromAddress": "noreply@mycompany.com"
+  //},
   "connectionStrings": {
     "NinjaOrganizerDBConnectionString": "Server=(localdb)\\MSSQLLocalDB;Database=NinjaOrganizerDB;Trusted_Connection=True;"
   }
