migrate to sqlite and version to server

--- a/NinjaOrganizer.API/appsettings.json
+++ b/NinjaOrganizer.API/appsettings.json
@@ -7,7 +7,15 @@
   //  "mailToAddress": "admin@mycompany.com",
   //  "mailFromAddress": "noreply@mycompany.com"
   //},
+
+
   "connectionStrings": {
-    "NinjaOrganizerDBConnectionString": "Server=(localdb)\\MSSQLLocalDB;Database=NinjaOrganizerDB;Trusted_Connection=True;"
+    //"NinjaOrganizerDBConnectionString": "Server=(localdb)\\MSSQLLocalDB;Database=NinjaOrganizerDB;Trusted_Connection=True;",
+
+    "NinjaOrganizerDBConnectionString": "Server=C:\\Users\\DG\\Downloads\\asp-dotnet-core-api-building-first\\07\\demos\\demos\\mojeAPI\\NinjaOrganizer.API\\;Database=Database.db;Trusted_Connection=True;"
+    // connectionString="Server=xxxx;Database=xxxx;Trusted_Connection=True;providerName=System.Data.SqlClient"
+    //providerName="System.Data.SqlClient"
+
+
   }
 }
